# sysmon-cli

./: .gitignore  README.md  pyproject.toml
cli/: cli.py
cli/commands/: cpu.py
reports/: cpu_log_20251104_152931.csv
