[project]
name = "cli"
version = "1.0"
description = "System monitor cli that gives you information on the system"
authors = [
    {name = "ruth-chirwa",email = "chirwaruth647@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.0",
    "rich>=13.6.0",
    "psutil>=5.9.5"  
]
packages = [
    { include = "cli" }
]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.0.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
